updated the styles songs playing issue